--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -45,10 +45,10 @@ page-home {
 
     &.background-2 {
       // background: -webkit-radial-gradient(center, ellipse cover, #fffcdd 0%, #fbf298 34%, #f9ec68 57%, #f9ec68 75%, #f9ec68 100%);
-      background-image: url("../assets/imgs/viettel-4g-bg-3.jpg");
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
+      // background-image: url("../assets/imgs/viettel-4g-bg-3.jpg");
+      // background-position: center;
+      // background-repeat: no-repeat;
+      // background-size: cover;
     }
   }
 
